[package]
name = "sylvanite"
version = "1.4.2"
edition = "2021"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
license = "CECILL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
buche = "0.7"
clap = { version = "3", features = ["derive"] }
clap-verbosity-flag = "1"
colored = "2"
flate2 = "1"
indicatif = {version = "0.16", features = ["rayon"]}
itertools = "0.10"
log = "0.4"
newick = "0.7"
ordered-float = "2"
petname = "1.1.3"
rayon = "1.5"
regex = "1.7.1"
rusqlite = "0.26"
syntesuite = "0.1"
thiserror = "1"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
