[package]
name = "sylvanite"
version = "1.5.2"
edition = "2021"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
license = "CECILL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
buche = "0.7"
clap = { version = "3", features = ["derive"] }
clap-verbosity-flag = "1"
colored = "2"
indicatif = {version = "0.16", features = ["rayon"]}
itertools = "0.10"
log = "0.4"
newick = "0.7"
ordered-float = "2"
rayon = "1.5"
smallvec = "1.10.0"
syntesuite = "0.2"
thiserror = "1"
chainsaw = "1.11"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
