[package]
name = "sylvanite"
version = "1.8.1"
edition = "2021"
authors = ["Franklin Delehelle <delehelle@ens.fr>"]
license = "CECILL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
buche = "0.7"
chainsaw = "1.14"
clap = { version = "3", features = ["derive"] }
clap-verbosity-flag = "1"
colored = "2"
either = "1.6"
identity-hash = "0.1.0"
indicatif = {version = "0.16", features = ["rayon"]}
itertools = "0.10"
log = "0.4"
newick = "0.11"
ordered-float = "3.4"
rayon = "1.5"
smallvec = "1.9"
syntesuite = "0.6"
thiserror = "1.0.37" # Do not update, Guix

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
